<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="projectDetailViewModel"
            type="com.klimaatmobiel.ui.viewModels.ProjectDetailViewModel" />
        <variable
            name="project"
            type="com.klimaatmobiel.domain.Project" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_weight="0.5"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".70">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="20dp">

                    <ImageView
                        android:id="@+id/detail_project_image"
                        android:layout_width="184dp"
                        android:layout_height="124dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/project_afbeelding_contentdescription"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{project.projectImage}"
                        app:layout_constraintDimensionRatio="H,16:9"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.214"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".50" />

                    <TextView
                        android:id="@+id/detail_budget_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/budget_titel_text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.504"
                        app:layout_constraintStart_toEndOf="@+id/detail_project_image"
                        app:layout_constraintTop_toTopOf="@+id/detail_project_image"/>

                    <TextView
                        android:id="@+id/detail_projectbudget_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/detail_project_image"
                        app:layout_constraintTop_toBottomOf="@+id/detail_budget_text"
                        app:projectMaxBudgetBinding="@{project.projectBudget}" />


                    <!--app:projectApplicationDomainBinding="@{project.applicationDomain.applicationDomainName}" -->

                    <TextView
                        android:id="@+id/detail_projectname_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_project_image"
                        app:projectNameBinding="@{project.projectName}" />

                    <TextView
                        android:id="@+id/detail_applicationdomain_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/toepassingsgebied_text"
                        android:textAlignment="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_projectname_text" />

                    <TextView
                        android:id="@+id/detail_projectapplicationdomain_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{project.applicationDomain.applicationDomainName}"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.503"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_applicationdomain_text" />


                    <TextView
                        android:id="@+id/detail_description_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/beschrijving_text"
                        android:textAlignment="center"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_projectapplicationdomain_text" />

                    <TextView
                        android:id="@+id/detail_projectdescription_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:text="@{project.projectDescr}"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/detail_description_text" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>